[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/craftbutton.gd" type="Script" id=1]
[ext_resource path="res://redsword.png" type="Texture" id=2]
[ext_resource path="res://coins and small stuff.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 48, 48 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 48, 48 )

[node name="craftbutton" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -592.0
margin_bottom = -384.0
rect_min_size = Vector2( 432, 216 )
script = ExtResource( 1 )

[node name="button" type="Area2D" parent="."]
position = Vector2( 144, 72 )
scale = Vector2( 2.25, 2.25 )

[node name="ColorRect" type="ColorRect" parent="button"]
margin_left = -64.0
margin_top = -32.0
margin_right = 128.0
margin_bottom = 64.0
color = Color( 0, 0, 0, 0.364706 )

[node name="Label" type="Label" parent="button/ColorRect"]
margin_left = 138.667
margin_top = 10.6667
margin_right = 178.667
margin_bottom = 24.6667
text = "1"

[node name="Label2" type="Label" parent="button/ColorRect"]
visible = false
margin_left = 138.667
margin_top = 42.6667
margin_right = 178.667
margin_bottom = 56.6667
text = "1"

[node name="Label3" type="Label" parent="button/ColorRect"]
visible = false
margin_left = 138.667
margin_top = 74.6667
margin_right = 178.667
margin_bottom = 88.6667
text = "1"

[node name="Sprite" type="Sprite" parent="button/ColorRect"]
position = Vector2( 117.333, 10.6667 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false
hframes = 3
vframes = 3

[node name="Sprite2" type="Sprite" parent="button/ColorRect"]
visible = false
position = Vector2( 117.333, 42.6667 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false
hframes = 3
vframes = 3

[node name="Sprite3" type="Sprite" parent="button/ColorRect"]
visible = false
position = Vector2( 117.333, 74.6667 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )
centered = false
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="button"]
position = Vector2( -16, 16 )
shape = SubResource( 7 )

[node name="TouchScreenButton" type="TouchScreenButton" parent="button"]
position = Vector2( -64, -32 )
shape = SubResource( 11 )

[node name="Sprite" type="Sprite" parent="button"]
modulate = Color( 1, 1, 1, 0.75 )
position = Vector2( -16, 16 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )

[connection signal="area_entered" from="button" to="." method="_on_button_area_entered"]
[connection signal="area_exited" from="button" to="." method="_on_button_area_exited"]
[connection signal="released" from="button/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
